--- a/bower.json
+++ b/bower.json
@@ -25,9 +25,8 @@
     "url": "git://github.com/ghinda/angular-meditor.git"
   },
   "dependencies": {
-    "angular": "1.3.15"
+    "angular-foundation-colorpicker": "1.0.1"
   },
   "devDependencies": {
-    "bourbon": "4.2.2"
   }
 }
