--- a/package.json
+++ b/package.json
@@ -8,22 +8,25 @@
   },
   "main": "dist/meditor.js",
   "dependencies": {
-    "angular": "1.3.15"
+    "angular": "1.6.4",
+    "bourbon": "^4.3.4",
+    "font-awesome": "^4.7.0",
+    "foundation-sites": "^6.3.1"
   },
   "devDependencies": {
-    "connect-livereload": "~0.5.1",
-    "grunt-angular-templates": "~0.5.x",
-    "grunt-build-control": "0.1.x",
-    "grunt-ng-annotate": "^1.0.1",
-    "grunt-sass": "~0",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^2.3.0",
     "gulp-concat-js": "^0.1.0",
+    "gulp-copy": "^1.0.0",
     "gulp-csso": "^3.0.0",
+    "gulp-delete-files": "0.0.1",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-ng-template-strings": "0.0.4",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2",
-    "gulp-webserver": "^0.9.1",
-    "matchdep": "~0.3.0"
+    "gulp-webserver": "^0.9.1"
   },
   "engines": {
     "node": ">=0.8.0"
